ajax expand/collapse for issues and volumes in publicationlisting viewlet, refs #4215
git-svn-id: https://svn.syslab.com/svn/syslabcom/recensio.theme/trunk@10190 51ee9ba4-e84d-4896-84de-354f1821c169

--- a/recensio/theme/browser/stylesheets/main.css
+++ b/recensio/theme/browser/stylesheets/main.css
@@ -2623,6 +2623,14 @@ div#extra-design-elements { display: none; }
     margin-top:0.5em;
 }
 
+#publicationlisting .review_container ul {
+    display:none;
+}
+
+#publicationlisting .review_container.expanded ul {
+    display:block;
+}
+
 /***********Styles for highlighting the batch 1,2,3....********/
 
 div.dialog-wrapper {
